no experience intro added

--- a/slides/intro_all.Rmd
+++ b/slides/intro_all.Rmd
@@ -14,8 +14,8 @@ output:
       highlightLines: true
       countIncrementalSlides: false
 ---
-background-image: url(logos/whiterose_dtp.png)
-background-position: 90% 20%
+background-image: url(../logos/whiterose_dtp.png)
+background-position: 7% 50%
 background-size: 300px
 
 ```{r setup, include=FALSE}
@@ -49,7 +49,7 @@ class: inverse
 
 # Introduction to Reproducibility in R
 
-## Emma Rand, emma.rand@york.ac.uk 
+## Emma Rand 
 
 ### University of York: 2020-03-19
 
@@ -104,9 +104,9 @@ Made with xaringan `r Cite(myBib, "xaringan")`
 ## 1030 Parallel Sessions  
 .pull-left[  
 [For those without experience in R](no_experience_intro.html)  
-* Introduction to R  
-* Project based approach  
-* Stuff from rbs slides  
+* Finding your way round RStudio  
+* Typing in data, doing some calculations on it, plotting it  
+* Understanding the manual  
 ]
 .pull-right[
 [For those with experience in R]()  
@@ -121,8 +121,10 @@ Made with xaringan `r Cite(myBib, "xaringan")`
 ## 1135 Parallel Sessions  
 .pull-left[   
 [For those without experience in R](no_experience_intro.html)  
-* Stuff from rbs slides  
-* more stuff
+* Importing data: working directories and paths  
+* Summarising and visualising with the [`tidyverse`](https://www.tidyverse.org/)  
+* Installing and loading packages
+
 ]
 .pull-right[ 
 [For those with experience in R]()  
@@ -132,13 +134,14 @@ Made with xaringan `r Cite(myBib, "xaringan")`
 
 ## 1315 R Markdown for Reproducible Reports  
 [R Markdown fundamentals]()  
+* Project based approach    
 * ...  
 * ...  
-* ...  
-
-## 1445 Coffee in the Atrium  
 ---
 # Workshop overview
+
+## 1445 Coffee in the Atrium  
+
 ## 1505 R Markdown for Reproducible Reports
 [More advanced markdown]()  
 * bbb
